index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Arial',
    monospace;
}

.crossed-line {
  text-decoration: line-through;
}

#add {
  position: fixed;
  top: 90px;
  left: 200px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  text-align: left;
}

